@@ -483,6 +483,44 @@ return|return
 name|_url
 return|;
 block|}
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+operator|(
+name|_includes
+condition|?
+literal|"I"
+else|:
+literal|"E"
+operator|)
+operator|+
+literal|":"
+operator|+
+name|_id
+operator|+
+literal|"("
+operator|+
+name|_confs
+operator|+
+literal|")"
+operator|+
+operator|(
+name|_url
+operator|==
+literal|null
+condition|?
+literal|""
+else|:
+name|_url
+operator|.
+name|toString
+argument_list|()
+operator|)
+return|;
+block|}
 block|}
 end_class
 
