@@ -4929,6 +4929,337 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveSeveralDefaultWithArtifactsAndConfs2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// second test case for IVY-283
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-283/ivyconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-283/ivy-d.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|ConfigurationResolveReport
+name|crr
+init|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"build"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|crr
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|9
+argument_list|,
+name|crr
+operator|.
+name|getDownloadReports
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|)
+argument_list|)
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_a"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_b"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_c"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_d"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_e"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_f"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_g"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_h"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"medicel"
+argument_list|,
+literal|"module_a"
+argument_list|,
+literal|"local"
+argument_list|,
+literal|"lib_a_i"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveDefaultWithArtifactsConf1
 parameter_list|()
 throws|throws
