@@ -1,0 +1,25 @@
+<ivy-module version="1.4">
+  <info organisation="medicel" module="module_d" />
+  <configurations defaultconfmapping="*->#;test->runtime">
+    <conf name="build" description="Buildtime dependency configuration" />
+    <conf name="runtime" extends="build" description="Runtime dependency configuration" />
+    <conf name="test" extends="runtime" description="Test dependency configuration" />
+  </configurations>
+  <publications>
+    <artifact name="lib_d_a" type="jar" />
+  </publications>
+  <dependencies>
+    <dependency name="module_b" rev="latest.integration" conf="build">
+      <artifact name="lib_b_a" type="jar" />
+    </dependency>
+    <dependency name="module_c" rev="latest.integration" conf="build">
+      <artifact name="lib_c_a" type="jar" />
+    </dependency>
+    <dependency name="module_a" rev="latest.integration" conf="build">
+      <artifact name="lib_a_a" type="jar" />
+      <artifact name="lib_a_c" type="jar" />
+      <artifact name="lib_a_d" type="jar" />
+      <artifact name="lib_a_e" type="jar" />
+    </dependency>
+  </dependencies>
+</ivy-module>
